# sugar-rs

./: Cargo.toml  README.md
src/: basic_macros.rs  collections_macros.rs  comprehension.rs  hashmap_ext.rs  lib.rs  number_ext.rs  result_ext.rs
src/basic_macros/: max_min.rs  mod.rs
src/primitive_syntax/: mod.rs
