[package]
authors = ["fangyuanziti <tiziyuanfang@gmail.com>"]
name = "sugar"
version = "0.1.0"
repository = "https://github.com/fangyuanziti/sugar-rs.git"
documentation = "https://docs.rs/sugar/"
license = "MIT"
description= "Rust syntax sugar collections."

[dependencies]
maplit = "1.0.1"
cute = "0.3.0"
vec_box = "1.0.0"
